# ear-recognizer-android

./: .gitignore  Makefile  README.md  scores.txt  scores2.txt
android/: README.md  import-summary.txt  settings.gradle
android/OpenCV-android-sdk/sdk/: build.gradle
android/OpenCV-android-sdk/sdk/java/: .project
android/OpenCV-android-sdk/sdk/java/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
android/OpenCV-android-sdk/sdk/native/jni/: OpenCVConfig.cmake
android/OpenCV-android-sdk/sdk/native/jni/abi-armeabi/: OpenCVConfig.cmake
android/OpenCV-android-sdk/sdk/native/jni/abi-mips64/: OpenCVConfig.cmake
android/OpenCV-android-sdk/sdk/native/jni/abi-x86/: OpenCVConfig.cmake
android/OpenCV-android-sdk/sdk/native/jni/abi-x86_64/: OpenCVConfig.cmake
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/haarcascades/: haarcascade_mcs_leftear.xml  haarcascade_mcs_rightear.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/openCVLibrary451/: build.gradle
include/: localization.hpp
report/: .gitignore  bibliography.bib  ear_recognizer.tex
report/evaluation/: charts.ipynb  scores.json  scores2.json
src/: CMakeLists.txt  descriptors.cpp  descriptors.hpp  landmark_detection.cpp  landmark_detection.hpp  localization.cpp  localization.hpp  main.cpp  normalization.cpp  normalization.hpp  utility.cpp  utility.hpp
tflite_converter/: main.py
(+206 files in other folders)
